<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">Nicolas Cage App</string>

    <!-- Standard -->
    <string name="std_yes">Yes</string>
    <string name="std_no">No</string>
    <string name="std_back">Back</string>
    <string name="std_continue">Continue</string>
    
    <!-- Unorganized Mess -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_scores">Scores</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_abcs_with_nic">AbcsWithNic</string>
    <string name="takeQuiz">TAKE THE QUIZ</string>
    <string name="title_activity_settings">Settings</string>
    <string name="slow_down_ABCs">Slow down A, B, C game</string>
    <string name="noSlowDown">NICOLAS CAGE SLOWS DOWN FOR NO MAN</string>
    <string name="score_title">Scores</string>
    <string name="rattle_the_cage_title">Rattle The Cage</string>
    <string name="rattle_the_cage_label">Total Score: </string>
    <string name="title_activity_score_menu">ScoreMenu</string>
    <string name="score_menu_title">Do you REALLY get NICOLAS CAGE?</string>
    <string name="rattle_the_cage_score_description">Did you have the courage to face the darkest depths of his harrowing yet awe-inspring insanity in RATTLE THE CAGE?</string>
    <string name="title_activity_rattle_the_cage_score">RattleTheCageScore</string>
    <string name="abcs_score_description">Were you able to keep up with his wild antics in A,B,C\'s with N,I,C?</string>
    <string name="title_activity_abcs_score">ABCsScore</string>
    <string name="cageclues_score_description">How well do you understand the complex and singular enigma that is Nicolas Cage, the passionate and fearless soul of Nicolas Cage—within or without the context of CAGE CLUES, WHAT DID HE LOSE?</string>
    <string name="title_activity_cage_clues_score">CageCluesScore</string>
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_description">These games are mere vehicles in order to 
        explore the glory and insanity that is Nicolas Cage.  Enjoy.</string>
    <string name="about_dialog_names">Nam Nguyen, Stephen Ridings, and Kyle Nicola</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_description">Go watch some Nicolas Cage movies you dummy</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="hi_score">RECORD:</string>
    <string name="most_recent_score">MOST RECENT:</string>
    <string name="perf_priceless">PRICELESS</string>
    <string name="rattle_text_pos_1">Shake Him</string>
    <string name="rattle_text_pos_2">Tell him he\'s a National Tragedy</string>
    <string name="rattle_text_pos_3">RAISE HIS ANGERZONA</string>
    <string name="rattle_text_pos_4">SHAKE HIS FACE/OFF</string>
    <string name="rattle_text_pos_5">AHHHHHHHHHHHHH</string>
    <string name="rattle_text_neg_2">Why are you weak?</string>
    <string name="rattle_text_neg_3"></string>
    <string name="rattle_text_neg_4">You such a disappointment</string>
    <string name="settings_dialog_title">Settings</string>

    <string name="zero">0</string>
    <string name="continue_to_score">Continue</string>
    <string name="main_menu_rattlecage_description">Nicolas Cage\'s Face</string>
    <string name="main_menu_rattlethecage">Rattle The Cage  </string>
    <string name="main_menu_abcswithnics">ABC\'s With NIC  </string>
    <string name="main_menu_cageclueswhatdidhelose">Cage Clues:\nWhat Did He Lose?  </string>

    <!-- Cage Clues -->
    <string name="cageclues_view_count">View Count: </string>
    <string name="cageclues_count">0</string>
    <string name="cageclues_start">Start</string>
    <string name="cageclues_description">Help find out what Nicolas Cage lost!</string>
    <string name="cageclues_continue">Continue</string>

    <!-- Stats -->
    <string name="stats_rattlethecage">Rattle The Cage</string>
    <string name="stats_rattlethecage_best_time">Best Time:</string>
    <string name="stats_abcswithnic">Abc\'s With Nic</string>
    <string name="stats_abcswithnic_high_score">High Score:</string>
    <string name="stats_cageclues">Cage Clues:\nWhat Did He Lose?</string>
    <string name="stats_cageclues_mystery_solved">Mystery Solved:</string>
    <string name="stats_cageclues_times_watched">Times Watched:</string>
    
    <string name="stats_toast_rattlethecage_tie">Tied in time with your best.  also known as failing. beelieve in yourself</string>
    <string name="stats_toast_rattlethecage_worse">Worse than your best.  stop falling beehind</string>
    <string name="stats_toast_rattlethecage_better">BEEEEEEEEEEEEEEEEEEEEEEEEEEEAUTIFUL</string>
    <string name="stats_toast_abcswithnic_tie">Tied.  Meh</string>
    <string name="stats_toast_abcswithnic_worse">Can\nt even beat your best score.  can you spell failure?  Because your parents sure did make one.</string>
    <string name="stats_toast_abcswithnic_better">New Best Score!  You can spell!  Wow!  So surprising!</string>
    <string name="stats_toast_cageclues_tie">You watched it same amount of times as your most.  Original.</string>
    <string name="stats_toast_cageclues_worse">Are you sure you watched it enough times?</string>
    <string name="stats_toast_cageclues_better">You should watch it more.  Just in case.</string>
    
    
    <!-- Abcs with Nic -->
	<string name="abcs_intro_info">Type along the Abc\'s while\n Nic&#8230;\'sings\' it</string>
	<string name="abcs_question">WHAT DID NICOLAS CAGE LOSE?</string>
	<string name="abcs_answer_one">His Hand</string>
	<string name="abcs_answer_two">His Bride</string>
	<string name="abcs_answer_three">His Self-Respect As An Actor</string>

</resources>
