<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard_background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abcs_question"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    
	<RadioGroup 
	    android:id="@+id/gameResponse"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	
	    <RadioButton
	        android:id="@+id/radioButton1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dp"
	        android:layout_marginTop="10dp"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/abcs_answer_one"
	        android:textColor="@android:color/white" />
	    
	    <RadioButton
	        android:id="@+id/radioButton2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dp"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/abcs_answer_two"
	        android:textColor="@android:color/white" />
	    
	    <RadioButton
	        android:id="@+id/radioButton3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dp"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/abcs_answer_three"
	        android:textColor="@android:color/white" />

</RadioGroup>


</LinearLayout>
