<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
   	android:background="@color/main_menu_background" >

    <VideoView
        android:id="@+id/cageclues_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/cageclues_view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
       	android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/cageclues_view_count" />

    <TextView
        android:id="@+id/cageclues_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/cageclues_view_count"
        android:textSize="20sp"
       	android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/cageclues_count" />
    
    <TextView 
        android:id="@+id/cageclues_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cageclues_video"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
       	android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/cageclues_description"/>

    <TextView
        android:id="@+id/cageclues_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
       	android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/cageclues_continue" />

</RelativeLayout>
